# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/ip": {
+        "/hostname": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -13,9 +13,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "IP"
+                    "Hostname"
                 ],
-                "summary": "Get ip data",
+                "summary": "Get hostname data",
                 "responses": {
                     "200": {
                         "description": "OK",
